@@ -70,6 +70,7 @@ allprojects {
             jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
             jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
             jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
+            // the three below are required by `com.google.testing.compile:compile-testing`
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
@@ -98,6 +99,9 @@ allprojects {
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
+            jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
+            jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+            jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
 
             // enable this to check for unintended use of boxed primitive iterators
             // note that this flag might cause OOMs on CI
